--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.mardillu.grosscalculator">
 
     <application
@@ -8,7 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GrossCalculator">
+        android:theme="@style/Theme.GrossCalculator"
+        android:appComponentFactory="@string/app_name"
+        tools:replace="android:appComponentFactory">
         <activity
             android:name=".MainActivity"
             android:exported="true">
