--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,8 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        maven { url  = uri("https://jitpack.io") }
+        maven { url = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
     }
 }
 dependencyResolutionManagement {
@@ -10,7 +12,13 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url  = uri("https://jitpack.io") }
+        maven { url = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
     }
 }
 rootProject.name = "Gross Calculator"
 include ':app'
+
+//mavenCentral()
+//maven { url  = uri("https://jitpack.io") }
+//maven { url = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
